--- a/Benchmarking_available_tools/__bmark_bhaas_sim50_NOREPS/examine_bmark_accuracy.Rmd
+++ b/Benchmarking_available_tools/__bmark_bhaas_sim50_NOREPS/examine_bmark_accuracy.Rmd
@@ -39,6 +39,8 @@ virusbreakend_data = get_TP_FP_per_virus("data/virusbreakend.agg.tsv.prepped.tru
 
 VF2Verse_data = get_TP_FP_per_virus("data/VF2Verse.agg.tsv.prepped.truthset_mapped") %>% mutate(method='VF2Verse')
 
+nf_vif_data = get_TP_FP_per_virus("data/nf_vif.agg.tsv.prepped.truthset_mapped") %>% mutate(method='nf_vif')
+
 ```
 
 
@@ -49,7 +51,8 @@ data = bind_rows(ctat_vif_data,
                  ViFi_data,
                  batvi_data,
                  virusbreakend_data,
-                 VF2Verse_data)
+                 VF2Verse_data,
+                 nf_vif_data)
 
 ```
 
